# BoK-Pharm

./: .env.example  .replit  MIGRATION_GUIDE.md  SETUP_GUIDE.md  design_guidelines.md  package-lock.json  package.json  pyproject.toml  replit.md  run_all.sh  start.sh  vite.config.ts
attached_assets/: Pasted-I-would-like-to-create-a-Progressive-web-application-that-enables-users-search-for-medication-from-P-1762846831825_1762846831826.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: AddressAutocomplete.tsx  BottomNav.tsx  DeliveryPartnerCard.tsx  MedicationCard.tsx  OrderHistoryCard.tsx  OrderStatusTimeline.tsx  PharmacyCard.tsx  SearchBar.tsx  StatsCard.tsx  ThemeToggle.tsx
client/src/components/examples/: BottomNav.tsx  DeliveryPartnerCard.tsx  MedicationCard.tsx  OrderHistoryCard.tsx  OrderStatusTimeline.tsx  PharmacyCard.tsx  SearchBar.tsx  StatsCard.tsx
client/src/hooks/: useFirebaseAuth.ts
client/src/lib/: firebase.ts  queryClient.ts
client/src/pages/: AdminDashboard.tsx  DeliveryDashboard.tsx  Home.tsx  InventoryOnboarding.tsx  Landing.tsx  OrderHistory.tsx  OrderTracking.tsx  PharmacyDashboard.tsx
public/: manifest.json
python_server/: .env  add_cart_tables.sql  app.py  create_tables.sql  fastapi_app.py  init_database.py  models.py  requirements.txt  run.sh  seed_database.py
server/: index.ts  replitAuth.ts  routes.ts  seed.ts  storage.ts
shared/: schema.ts
