[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.121.1",
    "firebase-admin>=7.1.0",
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
    "gunicorn>=23.0.0",
    "pydantic>=2.12.4",
    "python-dotenv>=1.2.1",
    "sqlmodel>=0.0.27",
    "supabase>=2.24.0",
    "uvicorn>=0.38.0",
]
